fix(reportGen): correct heating fee total amount calculation